# mpython

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  README_EN.md
docs/: Makefile  conf.py  demo.rst  demo1.rst  image_add.rst  index.rst  license.rst  make.bat  release.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/board/: drive.rst  flashburn.rst  hardware.rst  hw_overview.rst  index.rst  introduction.rst  mPython.rst  mpython2.rst  mpythonX.rst  software.rst
docs/classic/: Picoboard.rst  breathing_light.rst  classic_1.rst  classic_2.rst  clock.rst  dht11.rst  gradienter.rst  index.rst  lux&sound_Cal.rst  musicbox.rst  oneNetCmd.rst  oneNetDatastreams.rst  piano.rst  servo.rst  uartArduino.rst  weather.rst
docs/classic/game/: flappybird.rst  index.rst  pong.rst  snake.rst  tetris.rst
docs/classic/oneNET/: index.rst  oneNetCmd.rst  oneNetDatastreams.rst
docs/extboard/: extboard.rst  index.rst  parrot.rst
docs/extboard/tutorials/: extboard_kit.rst  parrot_kit.rst  tutorials_extboard.rst  (+1 more)
docs/hardware/: 掌控-外观规格图20190218..rar
docs/inc/: introduction.rst
docs/mPythonBox/: ai_case.rst  index.rst  introduce.rst  manual.rst
docs/mPythonX_code_examples/: OLED  OLED.xml
docs/mpython_classroom_kit/: ai_tutorials.rst  index.rst  introduce.rst  manual.rst  tutorials.rst
docs/reference/: asm_thumb2_arith.rst  asm_thumb2_compare.rst  asm_thumb2_directives.rst  asm_thumb2_float.rst  asm_thumb2_hints_tips.rst  asm_thumb2_index.rst  asm_thumb2_label_branch.rst  asm_thumb2_ldr.rst  asm_thumb2_logical_bit.rst  asm_thumb2_misc.rst  asm_thumb2_mov.rst  asm_thumb2_stack.rst  asm_thumb2_str.rst  constrained.rst  glossary.rst  index.rst  isr_rules.rst  packages.rst  repl.rst  speed_python.rst
docs/tools/: com.jca.udpsendreceive.2.apk
docs/tutorials/: accelerometer.rst  adc.rst  analog_io.rst  buttons.rst  buzz.rst  class4.rst  digital_io.rst  display.rst  filesystem.rst  gpio.rst  helloWorld.rst  i2c.rst  mqtt.rst  neopixel.rst  network.rst  network_basics.rst  pwm.rst  random.rst  repl.rst  sound&light.rst  thread.rst  timer.rst  uart.rst
examples/: connectWifi.py  extboad_audio.rar  mPythonFactorytest_1.3.py  motor_simple.py  net_weather.py  ntpClock.py  servo.py  tcp_client.py  timer.py
examples/01.显示屏/: 3D cube.py  AnalogClock.py  bmp.py  bouncing_ball.py  chinamap.py  helloworld.py  moveStar.py
examples/02.按键/: touchPad_notes.py
examples/03.加速度/: degrees.py
examples/04.板载/: soud&light.py
examples/06.网络/: OneNetCmd.py  WifiConnect.py  http_server.py  http_server_simplistic.py  ntpClock.py  oneNetDatastreams.py  tcpClient.py  tcpServer.py  telnet.py
examples/07.舵机/: ServoSweep.py
examples/08.RGB LED/: neopixel.py
examples/1.oled/: 3D cube.py  drawline.py  snow.py
examples/8.网络/: OneNetCmd.py  WifiConnect.py  connectwifi.py  http_get.py  http_server_simplistic.py  oneNetDatastreams.py  tcpClient.py  tcpServer.py
examples/IoT/: bigiot.py
examples/accelerometer/: gradienter.py
examples/audio/: audio_play.py  tts.py
examples/bluetooth/: hid_ppt_Remote_Control.py
examples/board_inside/: PlayMusic.py  do_re_mi.py
examples/button/: button.py  button_ctl_led.py  button_irq_ctl_led.py  button_tp_ctl_rgb.py
examples/display/: bouncing_ball.py  drawline.py  moveStar.py  scatman.py  snowing.py
examples/file/: print_directory.py  sdcard.py
examples/game/: PingPong.py  flappybird.py  pong.py  snake.py  tetris.py
examples/lib/: mPythonTest_1.3.py
examples/mpython_box/: key_control_motor.py  slider_control_motor.py
examples/mpython_classroom_kit/: 20classes_detect.py  face_detect.py  find_max_blob.py  key_control_motor.py  mnist.py  slider_control_motor.py
examples/network/: OneNetCmd.py  connectWifi.py  do_connect.py  example_requests.py  http_get.py  http_get_request.py  ip_parsing_json.py  udp_client.py  udp_server.py
examples/oled/: 3D cube.py  drawline.py
examples/onewire/: ds18b20.py
examples/particles/: accelParticle.py
examples/pin/: breathing_light.py
examples/radio/: radio.py  telegraph.py
examples/scratch/: scratch.py
examples/serveo/: acceleServo.py
examples/temp/: button.py  button_AB_2.py  mqtt.py  tcpClient.py  tcpServer.py  tcp_client.py  telnet.py  test_1.py  udpClient.py  udpServer.py
examples/thread/: thread_creat.py  thread_lock.py
examples/timer/: timer_alarm.py  timer_led_blink.py
examples/出厂测试/: mPythonDemo.py  mPythonFactorytest_1.4.py  mPythonFactorytest_1.5.py  mPythonFactorytest_1.6.py
examples/天猫精灵/: AliGenie.py  bigiot.py
extmod/: modframebuf.c
idf-patch/: idf-patch.sh  idf_patch.patch
lib/utils/: pyexec.c
mpy-cross/: .gitignore  mpy-cross.map
port/: .gitignore  CMakeLists.txt  Makefile  PORT.md  bak-Makefile1  build.sh  makefile  mpconfigport.h  mpconfigport.h-1  partitions.csv  qstrdefsport.h  release.py  release.sh  sdkconfig
port/boards/: manifest.py  sdkconfig.base  sdkconfig.ble
port/builtins/: esp32_nvs.c  machine_pin.c  machine_servo.c  machine_touchpad.c  modble_mesh.c  modcodec.c  modframebuf.c  modmachine.c  modmotion.c  modmotion.h  modmusic.c  modmusictunes.c  modnetwork.c  modnetwork.c-bak  modradio.c  modrfid.c  modrgbLED5x5.c  modxunfeiAI.c
port/main/: CMakeLists.txt
port/modules/: ATGM336H_5N.py  CSK6011A.py  acd1200.py  apds9960.py  bluebit.py  dht.py  ds18x20.py  forece.py  gui.py  hrcalc.py  max30102.py  neopixel.py  onewire.py  paj7620.py  parrot.py  pm25.py  sdcard.py  servo.py  solar.py  spl06_001.py  ssd1106.py  upip.py  upip_utarfile.py  urequests.py  weather.py  weather_icon.py  webrepl.py  webrepl_setup.py  websocket_helper.py
ports/esp32/: Makefile  labplus.c  machine_pin.c  machine_servo_pwm.c  machine_touchpad.c  main.c  makefile  modmachine.c  modmachine.h  modmusic.c  modmusic.h  modmusictunes.c  modnetwork.c  modradio.c  mpconfigport.h  partitions.csv  qstrdefsport.h  release.py  sdkconfig.h
ports/windows/: micropython.vcxproj
py/: mpconfig.h
vs/: mpython.code-workspace
(+509 files in other folders)
